--- a/_layouts/item.html
+++ b/_layouts/item.html
@@ -32,11 +32,13 @@ format: item
 
 {% if page.contributorquote %}<q class="pull-quote">"{{ page.contributorquote }}"</q>{% endif %}
 
-{% if page.creator %}<h4>Originally created by {{ page.creator }}</h4>{% endif %}
+<!-- {% if page.creator %}<h4>Originally created by {{ page.creator }}</h4>{% endif %} -->
 			
-{% if page.creator.creator_1 and page.creator.creator_2 %}<h4>Originally created by {{ page.creator.creator_1 }} and {{ page.creator.creator_2 }}</h4>{% endif %}
-			
-{% if page.creator.creator_1 %}<h4>Originally created by {{ page.creator.creator_1 }}</h4>{% endif %}
+{% if page.creator.creator_1 and page.creator.creator_2 %}
+			<h4>Originally created by {{ page.creator.creator_1 }} and {{ page.creator.creator_2 }}</h4>	
+{% elsif page.creator.creator_1 %}
+			<h4>Originally created by {{ page.creator.creator_1 }}</h4>
+{% endif %}
 <!-- {% elsif page.creator.creator_1 and page.creator.creator_2 %}<h4>Originally created {{ page.creator.creator_1 }} and {{ page.creator.creator_2 }}</h4> -->
 
 
