--- a/_layouts/item.html
+++ b/_layouts/item.html
@@ -31,13 +31,12 @@ format: item
 {% if page.contributor %}<h2>Object contributed by {{ page.contributor }}</h2>{% endif %}
 
 {% if page.contributorquote %}<q class="pull-quote">"{{ page.contributorquote }}"</q>{% endif %}
-
-<!-- {% if page.creator %}<h4>Originally created by {{ page.creator }}</h4>{% endif %} -->		
-{% if page.creator.creator_1 and page.creator.creator_2 %}<h4>Originally created by {{ page.creator.creator_1 }} and {{ page.creator.creator_2 }}</h4>	
-{% else page.creator.creator_1 %}<h4>Originally created by {{ page.creator.creator_1 }}</h4>
+		
+{% if page.creator.creator_1 and page.creator.creator_2 %}
+			<h4>Originally created by {{ page.creator.creator_1 }} and {{ page.creator.creator_2 }}</h4>	
+{% else %}
+			<h4>Originally created by {{ page.creator.creator_1 }}</h4>
 {% endif %}
-<!-- {% elsif page.creator.creator_1 and page.creator.creator_2 %}<h4>Originally created {{ page.creator.creator_1 }} and {{ page.creator.creator_2 }}</h4> -->
-
 
 {% if page.externalurl %}<p>Find out more at {{ page.externalurl }}{% endif %}
 
